--- a/apps/web/src/i18n/locales/hu.json
+++ b/apps/web/src/i18n/locales/hu.json
@@ -59,10 +59,29 @@
     "errorLoadingPlaces": "Hiba a helyek betöltésekor",
     "noPlacesFound": "Nincs találat",
     "errorLoadingPlace": "Hiba a hely betöltésekor",
+    "errorLoadingEvent": "Hiba az esemény betöltésekor",
     "backToList": "Vissza a listához",
+    "backToHome": "Vissza a kezdőlapra",
+    "gallery": "Galéria",
+    "share": "Megosztás",
+    "copyLink": "Link másolása",
+    "linkCopied": "Link másolva!",
+    "event": {
+      "title": "Események",
+      "description": "Fedezd fel az eseményeket"
+    },
+    "events": "Események",
+    "noEvents": "Nincs esemény",
     "contact": "Kapcsolat",
     "menu": "Menü",
-    "noResults": "Nincs találat"
+    "noResults": "Nincs találat",
+    "filters": "Szűrők",
+    "footer": {
+      "tagline": "Fedezd fel a helyi kincseket",
+      "legal": "Jogi információk",
+      "quickLinks": "Gyors linkek",
+      "rights": "Minden jog fenntartva."
+    }
   },
   "admin": {
     "dashboard": "Irányítópult",
@@ -70,10 +89,14 @@
     "tags": "Címkék",
     "priceBands": "Ár sávok",
     "places": "Helyek",
-    "towns": "Városok",
+    "towns": "Települések",
     "legalPages": "Jogi oldalak",
     "users": "Felhasználók",
+    "usersManagement": "Felhasználók kezelése",
     "tenants": "Területek",
+    "events": "Események",
+    "noEvents": "Nincs esemény",
+    "readMore": "Tovább",
     "settings": "Beállítások",
     "appSettings": "Alkalmazás beállítások",
     "profileMenu": "Profil",
@@ -121,7 +144,7 @@
     "seoDescriptionPlaceholder": "Alapértelmezett SEO leírás",
     "siteSettingsUpdated": "Oldal beállítások frissítve.",
     "selectCategory": "Válassz kategóriát",
-    "selectTown": "Válassz várost",
+    "selectTown": "Válassz települést",
     "selectPriceBand": "Válassz ár sávot",
     "heroImageUrl": "Hero kép URL",
     "dashboardCards": {
@@ -135,8 +158,10 @@
       "priceBandsDesc": "Ár sávok kezelése",
       "places": "Helyek",
       "placesDesc": "Helyek kezelése",
-      "towns": "Városok",
-      "townsDesc": "Városok kezelése",
+      "events": "Események",
+      "eventsDesc": "Események kezelése",
+      "towns": "Települések",
+      "townsDesc": "Települések kezelése",
       "legalPages": "Jogi oldalak",
       "legalPagesDesc": "Jogi oldalak kezelése",
       "settings": "Beállítások",
@@ -151,14 +176,16 @@
       "editPriceBand": "Ár sáv szerkesztése",
       "newPlace": "Új hely",
       "editPlace": "Hely szerkesztése",
-      "newTown": "Új város",
-      "editTown": "Város szerkesztése",
+      "newTown": "Új település",
+      "editTown": "Település szerkesztése",
       "newLegalPage": "Új jogi oldal",
       "editLegalPage": "Jogi oldal szerkesztése",
       "newUser": "Új felhasználó",
       "editUser": "Felhasználó szerkesztése",
       "newTenant": "Új bérlő",
-      "editTenant": "Bérlő szerkesztése"
+      "editTenant": "Bérlő szerkesztése",
+      "newEvent": "Új esemény",
+      "editEvent": "Esemény szerkesztése"
     },
     "table": {
       "nameHu": "Név (HU)",
@@ -191,10 +218,10 @@
       "createPlaceFailed": "A hely létrehozása sikertelen",
       "updatePlaceFailed": "A hely frissítése sikertelen",
       "deletePlaceFailed": "A hely törlése sikertelen",
-      "loadTownsFailed": "A városok betöltése sikertelen",
-      "createTownFailed": "A város létrehozása sikertelen",
-      "updateTownFailed": "A város frissítése sikertelen",
-      "deleteTownFailed": "A város törlése sikertelen",
+      "loadTownsFailed": "A települések betöltése sikertelen",
+      "createTownFailed": "A település létrehozása sikertelen",
+      "updateTownFailed": "A település frissítése sikertelen",
+      "deleteTownFailed": "A település törlése sikertelen",
       "loadLegalPagesFailed": "A jogi oldalak betöltése sikertelen",
       "createLegalPageFailed": "A jogi oldal létrehozása sikertelen",
       "updateLegalPageFailed": "A jogi oldal frissítése sikertelen",
@@ -213,7 +240,11 @@
       "defaultLanguageUpdated": "Az alapértelmezett nyelv sikeresen frissítve",
       "updateRoleFailed": "A szerepkör frissítése sikertelen",
       "disable2FAFailed": "A 2FA letiltása sikertelen",
-      "updateSiteSettingsFailed": "Az oldal beállítások frissítése sikertelen"
+      "updateSiteSettingsFailed": "Az oldal beállítások frissítése sikertelen",
+      "loadEventsFailed": "Az események betöltése sikertelen",
+      "createEventFailed": "Az esemény létrehozása sikertelen",
+      "updateEventFailed": "Az esemény frissítése sikertelen",
+      "deleteEventFailed": "Az esemény törlése sikertelen"
     },
     "validation": {
       "hungarianNameRequired": "A magyar név kötelező",
@@ -225,18 +256,20 @@
       "passwordRequired": "A jelszó kötelező",
       "passwordMinLength": "A jelszónak legalább 6 karakternek kell lennie",
       "tenantNameRequired": "A bérlő neve kötelező",
-      "tenantSlugRequired": "A bérlő slug kötelező"
+      "tenantSlugRequired": "A bérlő slug kötelező",
+      "startDateRequired": "A kezdés dátuma kötelező"
     },
-    "confirmDeleteTown": "Biztosan törölni szeretnéd ezt a várost?",
+    "confirmDeleteTown": "Biztosan törölni szeretnéd ezt a települést?",
     "confirmDeleteUser": "Biztosan törölni szeretnéd ezt a felhasználót? Ez a művelet nem vonható vissza.",
     "confirmChangeRole": "Biztosan meg szeretnéd változtatni a felhasználó szerepkörét {{role}}-ra?",
     "confirmDisable2FA": "Biztosan letiltod a 2FA-t ennél a felhasználónál?",
+    "confirmDeleteEvent": "Biztosan törölni szeretnéd ezt az eseményt?",
     "confirmations": {
       "deleteCategory": "Biztosan törölni szeretnéd ezt a kategóriát?",
       "deleteTag": "Biztosan törölni szeretnéd ezt a címkét?",
       "deletePriceBand": "Biztosan törölni szeretnéd ezt az ár sávot?",
       "deletePlace": "Biztosan törölni szeretnéd ezt a helyet?",
-      "deleteTown": "Biztosan törölni szeretnéd ezt a várost?",
+      "deleteTown": "Biztosan törölni szeretnéd ezt a települést?",
       "deleteLegalPage": "Biztosan törölni szeretnéd ezt a jogi oldalt?",
       "deleteUser": "Biztosan törölni szeretnéd ezt a felhasználót? Ez a művelet nem vonható vissza.",
       "deleteTenant": "Biztosan törölni szeretnéd ezt a bérlőt?",
@@ -258,6 +291,12 @@
     "disable2FA": "2FA letiltása",
     "primaryDomain": "Elsődleges domain",
     "shortDescription": "Rövid leírás",
+    "shortDescriptionPlaceholder": "Rövid, két soros leírás",
+    "startDate": "Kezdés dátuma",
+    "endDate": "Befejezés dátuma",
+    "isPinned": "Rögzített",
+    "selectPlace": "Válassz helyet",
+    "place": "Hely",
     "roles": {
       "viewer": "Megtekintő",
       "editor": "Szerkesztő",
