--- a/apps/web/src/i18n/locales/hu.json
+++ b/apps/web/src/i18n/locales/hu.json
@@ -199,6 +199,12 @@
     "published": "Közzétéve",
     "isCrawlable": "Keresőmotorok indexelhetik az oldalt",
     "isCrawlableDescription": "Ha be van kapcsolva, a keresőmotorok (Google, Bing, stb.) indexelhetik az oldalt. Ha ki van kapcsolva, a robots.txt és meta tag-ek megakadályozzák az indexelést.",
+    "defaultPlaceholderImages": "Alapértelmezett helyettesítő képek",
+    "defaultPlaceholderCardImage": "Alapértelmezett helyettesítő kép kártyákhoz",
+    "defaultPlaceholderCardImageDescription": "Ez a kép jelenik meg a helyek kártyáin, ha nincs beállítva kép",
+    "defaultPlaceholderDetailHeroImage": "Alapértelmezett helyettesítő hero kép részletekhez",
+    "defaultPlaceholderDetailHeroImageDescription": "Ez a kép jelenik meg a helyek részletező oldalán, ha nincs beállítva hero kép",
+    "imageUrlPlaceholder": "https://example.com/kep.jpg",
     "errors": {
       "userNotFound": "Felhasználó nem található",
       "loadFailed": "Betöltés sikertelen",
@@ -355,6 +361,7 @@
     "required": "Kötelező mező",
     "invalidEmail": "Érvénytelen email cím",
     "invalidUrl": "Érvénytelen URL",
+    "invalidImageUrl": "Érvénytelen kép URL. Csak http:// és https:// URL-ek engedélyezettek.",
     "minLength": "Minimum {{min}} karakter",
     "maxLength": "Maximum {{max}} karakter"
   }
